--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   </head>
   <body id = "home">
 	<header>
-		<img class="logo" src="assets/image/logo.svg"></a></div>
+		<img class="logo" src="./assets/image/logo.svg"></a></div>
 		<nav class="navbar">
 			<ul class = "menu-list">
 				<div class="icon cancel-btn">
-					<img src = "assets/image/cancel.svg">
+					<img src = "./assets/image/cancel.svg">
 				</div>
 				<li><a href="#Home" class = "navactive">Home</a></li>
 				<li><a href="#Features">Features</a></li>
@@ -25,7 +25,7 @@
 				<li><a href="#Contact">Contact</a></li>
 			</ul>
 			<div class="icon menu-btn">
-				<img src = "assets/image/burger.svg">
+				<img src = "./assets/image/burger.svg">
 			</div>
 		</nav>
 		<a class="cta" href="#"><button>buy now</button></a>
@@ -49,7 +49,7 @@
 		
 		<div class = "features" id="Features">
 			<div class = "sec">
-				<img src = "assets/image/hearing_aid.png">
+				<img src = "./assets/image/hearing_aid.png">
 			</div>
 			<div class = "circ">
 				<circle id="blob1"><p>EASY TO FIT</p></circle>
